# Plug-and-play-inference-engine

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  docker-compose.yml  export_model.py  export_resnet.py  inference_pb2.py  inference_pb2_grpc.py  setup_guide.md
proto/: inference.proto
src/: main.cpp
src/adapters/: grpc_adapter.cpp  grpc_adapter.h  inference.grpc.pb.cc  inference.grpc.pb.h  inference.pb.cc  inference.pb.h  kafka_adapter.cpp  kafka_adapter.h
src/core/: inference_core.cpp  inference_core.h  interfaces.h  memory_pool.cpp  memory_pool.h
src/pipeline/: image_preprocessor.cpp  image_preprocessor.h  onnx_executor.cpp  onnx_executor.h  resnet_postprocessor.cpp  resnet_postprocessor.h
tests/: batch_client.py  benchmark_cpp.cpp  benchmark_py.py  kafka_client.py  main_test.cpp  test_client.py
